--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tripper?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=owner
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
+
+spring.jpa.hibernate.ddl-auto=update
